# openfhe-development

./: CMakeLists.txt  scheme_parameters.md
galois-scripts/: cmake-configure.sh  cmake_configure.sh  cmake_configure_debug.sh  galois-build-example
galois-tests/: CMakeLists.txt
galois-tests/src/: allocation_table.cpp  hello_test.cpp
src/binfhe/lib/: binfhe-base-scheme.cpp  lwe-pke.cpp  rgsw-acc-cggi.cpp  rgsw-acc.cpp
src/core/include/: cprobes.h
src/core/include/lattice/hal/: lat-backend.h
src/core/include/lattice/hal/basalisc/: compiler-impl.h  compiler.h  dcrtpoly-impl.h  dcrtpoly.h  nativepoly-impl.h  nativepoly.h  poly-impl.h  poly.h
src/core/include/lattice/hal/basalisc/compiler/: alloc_table.h  constants.h  dead_code.h  evaluator.h  instruction.h  instruction_analysis.h  instruction_buffer.h  instruction_generator.h  linear_scan.h  modulus_table.h  ssa-impl.h  ssa.h  symbolic-impl.h  symbolic.h
src/core/include/lattice/hal/default/: dcrtpoly-impl.h  poly-impl.h  poly.h
src/core/lib/lattice/: lattice.cpp
src/pke/examples/: basalisc-cmu-phase2-simple-bootstrap.cpp  bfv-fanout.cpp  simple-ckks-bootstrapping.cpp
src/pke/include/schemebase/: base-scheme.h
src/pke/lib/keyswitch/: keyswitch-hybrid.cpp
src/pke/lib/scheme/: gen-cryptocontext-params-validation.cpp
src/pke/lib/scheme/ckksrns/: ckksrns-fhe.cpp  ckksrns-parametergeneration.cpp
src/pke/lib/schemerns/: rns-pke.cpp
